fix: 로그인 로그아웃 기능 개선